# NammaLang

./: LICENSE.txt  README.md  pyproject.toml  setup.py
nammalang/: __main__.py  interpreter.py
nammalang.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
